--- a/public/chat.html
+++ b/public/chat.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
-    <title>ChatCord App</title>
+    <title>SpaceChat App</title>
     </head>
     <body>
         <div class="chat-container">
             <header class="chat-header">
-            <h1><i class="fas fa-smile"></i> Space Chat</h1>
+            <h1>Space Chat</h1>
             <a href="index.html" class="btn">Leave Room</a>
             </header>
             <main class="chat-main">
@@ -26,6 +26,10 @@
             </main>
             <div class="chat-form-container">
                 <form id="chat-form">
+                    <div class="dropdown-emoji" style="margin-right : 10px;">
+                        <button type="button" class="btn" style="margin : 5px; padding : 8px 10px; border-radius : 2.5rem; transform" id="icon-btn"><i class="fas fa-grin-alt"></i></button>
+                        <div id="emoji-content"></div>
+                    </div>
                     <input
                     id="msg"
                     type="text"
@@ -33,7 +37,7 @@
                     required
                     autocomplete="off"
                     />
-                    <button class="btn-sent"><i class="fas fa-paper-plane"></i> Send</button>
+                    <button class="btn-sent"><i class="fas fa-paper-plane"></i></button>
                 </form>
             </div>
         </div>
