--- a/public/chat.html
+++ b/public/chat.html
@@ -14,6 +14,7 @@
             <a href="index.html" class="btn">Leave Room</a>
             </header>
             <main class="chat-main">
+            <span class="toggle-sidebar" tabindex="-1"><i class="fas fa-chevron-right"></i></span>
             <div class="chat-sidebar">
                 <h3><i class="fas fa-comments"></i> Room Name:</h3>
                 <h2 id="room-name"></h2>
@@ -26,8 +27,8 @@
             </main>
             <div class="chat-form-container">
                 <form id="chat-form">
-                    <div class="dropdown-emoji" style="margin-right : 10px;">
-                        <button type="button" class="btn" style="margin : 5px; padding : 8px 10px; border-radius : 2.5rem; transform" id="icon-btn"><i class="fas fa-grin-alt"></i></button>
+                    <div class="dropdown-emoji" style="">
+                        <button type="button" class="btn" style="padding : 9px 13px; border-radius : 2.5rem;" id="icon-btn"><i class="fas fa-grin-alt"></i></button>
                         <div id="emoji-content"></div>
                     </div>
                     <input
