--- a/public/chat.html
+++ b/public/chat.html
@@ -14,7 +14,7 @@
             <a href="index.html" class="btn">Leave Room</a>
             </header>
             <main class="chat-main">
-            <span class="toggle-sidebar" tabindex="-1"><i class="fas fa-chevron-right"></i></span>
+            <div class="toggle-sidebar" tabindex="-1"><i class="fas fa-chevron-right"></i></div>
             <div class="chat-sidebar">
                 <h3><i class="fas fa-comments"></i> Room Name:</h3>
                 <h2 id="room-name"></h2>
