--- a/public/chat.html
+++ b/public/chat.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
     <title>SpaceChat App</title>
+    <audio id="notification-sound" src="../assets/WaterdropMessageNotification.mp3" autoplay></audio>
     </head>
     <body>
         <div class="chat-container">
