Adding copy room id to the clipboard feature

--- a/public/chat.html
+++ b/public/chat.html
@@ -24,6 +24,7 @@
                 </ul>
             </div>
             <div class="chat-messages">
+                <div class="notify"></span></div>
             </div>
             </main>
             <div class="chat-form-container">
