--- a/public/chat.html
+++ b/public/chat.html
@@ -69,7 +69,7 @@
         <div class="chat-container">
             <header class="chat-header">
             <h1>Space Chat</h1>
-            <a href="index.html" class="btn">Leave Room</a>
+            <a href="index.html" class="btn" id="leave-link">Leave Room</a>
             </header>
             <main class="chat-main">
             <div class="toggle-sidebar" tabindex="-1"><i class="fas fa-chevron-right"></i></div>
