--- a/public/chat.html
+++ b/public/chat.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+        integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+        crossorigin="anonymous"
+    />
     <title>SpaceChat App</title>
     <audio id="notification-sound" src="../assets/WaterdropMessageNotification.mp3" autoplay></audio>
     </head>
@@ -66,6 +72,10 @@
 
 			init();
 		</script>
+        <div id="background-url">
+            <i class="fas fa-images"></i>
+            <div id="list-background-url"></div>
+        </div>
         <div class="chat-container">
             <header class="chat-header">
             <h1>Space Chat</h1>
