Fix change background function

--- a/public/chat.html
+++ b/public/chat.html
@@ -74,7 +74,16 @@
 		</script>
         <div id="background-url">
             <i class="fas fa-images"></i>
-            <div id="list-background-url"></div>
+            <div id="list-background-url">
+                <div class="background-item">
+                    <div>Set Background</div>
+                    <img class="background-option" width="200" height="200" src="../assets/d1aehdnbq0h21.jpg">
+                </div>
+                <div class="background-item">
+                    <div>Set Background</div>
+                    <img class="background-option" width="200" height="120" src="../assets/jameswebb-3333.png">
+                </div>
+            </div>
         </div>
         <div class="chat-container">
             <header class="chat-header">
