Adding muted function

--- a/public/chat.html
+++ b/public/chat.html
@@ -85,6 +85,9 @@
                 </div>
             </div>
         </div>
+        <div class="muted">
+            <i class="fas fa-bell"></i>
+        </div>
         <div class="chat-container">
             <header class="chat-header">
             <h1>Space Chat</h1>
